cabal-version:      3.0
name:               examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Brian J. Cardiff
maintainer:         bcardiff@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable echo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.17.2.1 && <5.0
      , tinyapp
    hs-source-dirs:   app/echo
    default-language: GHC2021
    default-extensions:

executable cursor
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    ghc-options:      -threaded
    build-depends:
        base >=4.17.2.1 && <5.0
      , tinyapp
    hs-source-dirs:   app/cursor
    default-language: GHC2021
    default-extensions:
