cabal-version:      3.0
name:               tinyapp
version:            0.2.0.0
synopsis:           Library to build tiny apps in Haskell
description:        Library to build tiny apps in Haskell such a REPLs or text-based applications that reacts to keystrokes
homepage:           https://github.com/bcardiff/haskell-tinyapp
license:            MIT
license-file:       LICENSE
author:             Brian J. Cardiff
maintainer:         bcardiff@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
category:           REPL, tui, Command Line

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        TinyApp.Repl
        TinyApp.Interactive
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.17.2.1 && <5.0,
        brick >= 2.4 && < 2.6,
        vty >= 6.2 && < 6.3,
        mtl >= 2.2.2 && < 2.3,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        OverloadedRecordDot

test-suite tinyapp-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.2.1 && <5.0,
        tinyapp
